tests/golden/errors/ord-multichar.rk
fn main() {
    print(ord("ab"))
}
